apps/05-home-apps/02-file-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files
  namespace: media
spec:
  replicas: 2
  selector:
    matchLabels:
      app: files
  template:
    metadata:
      labels:
        app: files
    spec:
      containers:
      - name: files
        image: nginx:1.31.6 # {"$imagepolicy": "flux-system:file-server-policy"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: files-volume
          mountPath: /usr/share/nginx/html
          subPath: static
        - name: files-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
          limits:
            cpu: "500m"
            memory: "250Mi"
      volumes:
      - name: files-volume
        persistentVolumeClaim:
          claimName: nas-lh-public
      - name: files-conf
        configMap:
          name: files-conf
          items:
          - key: default.conf
            path: default.conf
